[package]
name = "steadfast_defs"
version = "0.1.0"
authors = ["Stephen Ribich <stephen@ribich.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steadfast_modules = { path = "../steadfast_modules", version = "0.1.0" }